[gd_scene load_steps=58 format=3 uid="uid://bs3xmnbwmhy8h"]

[ext_resource type="Script" path="res://Entities/Player/PlayerController.gd" id="1_8yn75"]
[ext_resource type="PackedScene" uid="uid://b4bmc8kffxqk" path="res://Entities/Player/PlayerCamera.tscn" id="2_n3cgq"]
[ext_resource type="Script" path="res://Entities/Player/LookaheadCameraFollower.gd" id="2_x7k1v"]
[ext_resource type="Texture2D" uid="uid://g1vlv65nat5l" path="res://art/placeholder/white_turkeyleg_animation_blank.png" id="3_340x3"]
[ext_resource type="Texture2D" uid="uid://dww0mincdfcua" path="res://Entities/Player/atlas_texture_player_parts.tres" id="4_gxpwb"]
[ext_resource type="Texture2D" uid="uid://b5kqk4ulv38a2" path="res://art/player/speed_lines.png" id="4_nhl25"]
[ext_resource type="PackedScene" uid="uid://bxyn1mq357nt6" path="res://Entities/Player/cyber_ronin_sprites.tscn" id="5_tbet1"]
[ext_resource type="Script" path="res://Utilities/UtilityScripts/StateMachine.gd" id="10_6ualt"]
[ext_resource type="Script" path="res://Entities/Player/Idle.gd" id="11_jtylp"]
[ext_resource type="Script" path="res://Entities/Player/Run.gd" id="12_oq1kf"]
[ext_resource type="Script" path="res://Entities/Player/Air.gd" id="13_a17mm"]
[ext_resource type="PackedScene" uid="uid://djciwn4x702tr" path="res://UI/hud.tscn" id="14_fp8yf"]
[ext_resource type="Script" path="res://Entities/Player/DebugLabel.gd" id="15_7astd"]
[ext_resource type="Script" path="res://Entities/Player/DescendingKick.gd" id="16_7kpt4"]
[ext_resource type="Script" path="res://Entities/Player/Dash.gd" id="18_6dmrt"]
[ext_resource type="Script" path="res://Entities/Player/ChargeAudio.gd" id="21_85smj"]
[ext_resource type="AudioStream" uid="uid://biyotkto23day" path="res://audio/sfx/player_sfx/hold_strgpunch.ogg" id="21_ttxvf"]
[ext_resource type="AudioStream" uid="uid://cj8ty13udphta" path="res://audio/sfx/player_sfx/hold_strgpunch2.ogg" id="22_n1umw"]
[ext_resource type="Script" path="res://Entities/Player/DoubleJump.gd" id="23_r318r"]
[ext_resource type="AudioStream" uid="uid://6sfgfl8wk6bm" path="res://audio/sfx/player_sfx/hold_strgpunch_3.ogg" id="23_w2jbr"]
[ext_resource type="AudioStream" uid="uid://ddnyec60dy814" path="res://audio/sfx/player_sfx/player_bigpunch_impact.mp3" id="24_ctvvk"]
[ext_resource type="Script" path="res://Entities/Player/Landing.gd" id="25_hj8m7"]
[ext_resource type="Script" path="res://Entities/Player/IFrames.gd" id="25_hry2y"]
[ext_resource type="PackedScene" uid="uid://dxjihdq7d8mpk" path="res://Entities/Player/player_audio.tscn" id="25_x3gmp"]
[ext_resource type="AnimationLibrary" uid="uid://cdw7kwxvck8tn" path="res://Entities/Player/PlayerAnimationLibrary.tres" id="26_6myd8"]
[ext_resource type="Script" path="res://Entities/Player/Dying.gd" id="26_npw41"]
[ext_resource type="AudioStream" uid="uid://dnxtipx2g0662" path="res://audio/sfx/player_sfx/player_punch1.mp3" id="26_s0xam"]
[ext_resource type="Script" path="res://Entities/Player/InTransit.gd" id="26_teftq"]
[ext_resource type="Script" path="res://Entities/Player/Dead.gd" id="27_0qqb8"]
[ext_resource type="Script" path="res://Entities/Player/StrongPunch.gd" id="27_487ye"]
[ext_resource type="AudioStream" uid="uid://gnqxeny4xp4r" path="res://audio/sfx/player_sfx/player_punch2.mp3" id="27_sll0y"]
[ext_resource type="Script" path="res://Entities/Player/FastPunch.gd" id="28_amcrx"]
[ext_resource type="AudioStream" uid="uid://53nu3fgsjlc7" path="res://audio/sfx/player_sfx/player_punch3_uppercut.mp3" id="28_n44v8"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ghh7o"]
radius = 7.0
height = 38.0

[sub_resource type="AtlasTexture" id="AtlasTexture_eytj7"]
atlas = ExtResource("4_nhl25")
region = Rect2(0, 0, 32, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_otr5b"]
atlas = ExtResource("4_nhl25")
region = Rect2(32, 0, 32, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_jbjtm"]
atlas = ExtResource("4_nhl25")
region = Rect2(64, 0, 32, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_gt00r"]
atlas = ExtResource("4_nhl25")
region = Rect2(96, 0, 32, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_yehfj"]
atlas = ExtResource("4_nhl25")
region = Rect2(0, 0, 37, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_4x3fj"]
atlas = ExtResource("4_nhl25")
region = Rect2(37, 0, 37, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_o1lh0"]
atlas = ExtResource("4_nhl25")
region = Rect2(74, 0, 37, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_mt14w"]
atlas = ExtResource("4_nhl25")
region = Rect2(111, 0, 37, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ee1v"]
atlas = ExtResource("4_nhl25")
region = Rect2(148, 0, 37, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ginxa"]
atlas = ExtResource("4_nhl25")
region = Rect2(185, 0, 37, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_3ov6f"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eytj7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_otr5b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jbjtm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gt00r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yehfj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4x3fj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o1lh0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mt14w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ee1v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ginxa")
}],
"loop": false,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a8hms"]

[sub_resource type="AtlasTexture" id="AtlasTexture_o20hr"]
atlas = ExtResource("4_gxpwb")
region = Rect2(191, 193.5, 106, 104)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k6ucv"]
size = Vector2(16, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_46i3j"]
size = Vector2(20, 38)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ghqx3"]
size = Vector2(46, 37.4751)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_10l48"]
streams_count = 3
playback_mode = 2
random_pitch = 1.0
random_volume_offset_db = 0.0
stream_0/stream = ExtResource("21_ttxvf")
stream_0/weight = 1.0
stream_1/stream = ExtResource("22_n1umw")
stream_1/weight = 1.0
stream_2/stream = ExtResource("23_w2jbr")
stream_2/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_xs8aj"]
streams_count = 1
stream_0/stream = ExtResource("24_ctvvk")
stream_0/weight = 1.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_is7h8"]
size = Vector2(27, 32)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_xkxws"]
streams_count = 1
stream_0/stream = ExtResource("26_s0xam")
stream_0/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_7jb3f"]
streams_count = 1
stream_0/stream = ExtResource("27_sll0y")
stream_0/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_px4x1"]
streams_count = 1
stream_0/stream = ExtResource("28_n44v8")
stream_0/weight = 1.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m8oiq"]
size = Vector2(14, 6)

[node name="Player" type="CharacterBody2D" groups=["Player"]]
collision_mask = 15
script = ExtResource("1_8yn75")

[node name="WallDetector" type="RayCast2D" parent="."]
position = Vector2(0, -19)
target_position = Vector2(58, 0)
collision_mask = 8

[node name="Lookahead" type="Node2D" parent="."]
position = Vector2(2.08165e-12, -32)
script = ExtResource("2_x7k1v")

[node name="Camera2D" parent="Lookahead" instance=ExtResource("2_n3cgq")]
position = Vector2(2.08165e-12, 2.08165e-12)
drag_left_margin = 0.2
drag_top_margin = 0.2
drag_right_margin = 0.2
drag_bottom_margin = 0.2

[node name="Sprite2D" type="Sprite2D" parent="Lookahead"]

[node name="MovementCollisionShape" type="CollisionShape2D" parent="."]
position = Vector2(0, -19)
shape = SubResource("CapsuleShape2D_ghh7o")

[node name="IFrames" type="Node2D" parent="."]
script = ExtResource("25_hry2y")

[node name="HurtFlash" type="Polygon2D" parent="IFrames"]
visible = false
color = Color(1, 0.207843, 0.396078, 0.596078)
polygon = PackedVector2Array(-6, -18, -20, -29, -6, -28, 0, -45, 5, -30, 17, -30, 5, -18, 14, -1, 1, -11, -11, -1)

[node name="Body" type="Node2D" parent="."]

[node name="CyberRoninSprites" parent="Body" instance=ExtResource("5_tbet1")]
animation = &"idle"

[node name="SpeedLines" type="AnimatedSprite2D" parent="Body"]
visible = false
position = Vector2(-12.7579, -38.2736)
scale = Vector2(2, 1)
sprite_frames = SubResource("SpriteFrames_3ov6f")
frame = 9
offset = Vector2(-15.7046, 1.14441e-05)

[node name="PushBox" type="AnimatableBody2D" parent="Body"]
position = Vector2(24, -18)
collision_layer = 0
collision_mask = 0

[node name="PushBoxColShape" type="CollisionShape2D" parent="Body/PushBox"]
shape = SubResource("RectangleShape2D_a8hms")

[node name="Actions" type="Node2D" parent="Body"]

[node name="descending_kick" type="Node2D" parent="Body/Actions"]

[node name="Torso" type="Node2D" parent="Body"]
visible = false
position = Vector2(0, -31)
rotation = 0.321755

[node name="BodySprite" type="Sprite2D" parent="Body/Torso"]
position = Vector2(-1, -10)
rotation = 1.57079
scale = Vector2(0.33, 0.1)
texture = ExtResource("4_gxpwb")
region_enabled = true
region_rect = Rect2(213, 297.5, 67, 127)

[node name="Neck" type="Sprite2D" parent="Body/Torso/BodySprite"]
position = Vector2(-25.5632, -1.32771)
rotation = -3.03936
scale = Vector2(0.320375, 0.357319)
texture = ExtResource("3_340x3")
offset = Vector2(19.174, -0.495834)

[node name="Head" type="Sprite2D" parent="Body/Torso/BodySprite/Neck"]
position = Vector2(10.9225, 3.58452)
rotation = 1.72086
scale = Vector2(4, 2)
texture = SubResource("AtlasTexture_o20hr")
offset = Vector2(-3.72169, -34.7528)

[node name="ShoulderR" type="Node2D" parent="Body/Torso"]
position = Vector2(-7, -18)

[node name="UpperArmR" type="Sprite2D" parent="Body/Torso/ShoulderR"]
rotation = 2.55395
scale = Vector2(0.261688, 0.261688)
texture = ExtResource("4_gxpwb")
offset = Vector2(18.6845, 1.07569)
region_enabled = true
region_rect = Rect2(180, 291.5, 53, 45)

[node name="Lower" type="Sprite2D" parent="Body/Torso/ShoulderR/UpperArmR"]
position = Vector2(38.9393, 1.84035)
rotation = -0.572171
scale = Vector2(0.773518, 0.773518)
texture = ExtResource("3_340x3")
offset = Vector2(18.6845, 1.07569)

[node name="ShoulderL" type="Node2D" parent="Body/Torso"]
modulate = Color(0.729412, 0.729412, 0.729412, 1)
z_index = -1
position = Vector2(5, -19)

[node name="UpperArmL" type="Sprite2D" parent="Body/Torso/ShoulderL"]
rotation = 1.14933
scale = Vector2(0.261688, 0.261688)
texture = ExtResource("3_340x3")
offset = Vector2(18.6845, 1.07569)

[node name="LowerArmL" type="Sprite2D" parent="Body/Torso/ShoulderL/UpperArmL"]
position = Vector2(38.9393, 1.84035)
rotation = -1.57612
scale = Vector2(0.773518, 0.773518)
texture = ExtResource("3_340x3")
offset = Vector2(18.6845, 1.07569)

[node name="HipR" type="Node2D" parent="Body/Torso"]
z_index = 1

[node name="LegUpperR" type="Sprite2D" parent="Body/Torso/HipR"]
position = Vector2(-2.85476, 0.568854)
rotation = 1.9165
scale = Vector2(0.5, 0.17)
texture = ExtResource("4_gxpwb")
offset = Vector2(17.7187, 0.855423)
region_enabled = true
region_rect = Rect2(193, 426.5, 46, 56)

[node name="LegLowerR" type="Sprite2D" parent="Body/Torso/HipR/LegUpperR"]
position = Vector2(41.6033, -0.811409)
rotation = 1.44145
scale = Vector2(1, 0.8)
texture = ExtResource("4_gxpwb")
offset = Vector2(17.7187, 0.855423)
region_enabled = true
region_rect = Rect2(184, 470.5, 39, 41)

[node name="FootR" type="Sprite2D" parent="Body/Torso/HipR/LegUpperR/LegLowerR"]
position = Vector2(40.485, -0.480497)
rotation = -1.41912
scale = Vector2(0.581697, 0.581696)
texture = ExtResource("3_340x3")
offset = Vector2(17.7187, 0.855423)

[node name="HipL" type="Node2D" parent="Body/Torso"]
modulate = Color(0.662745, 0.662745, 0.662745, 1)
z_index = -1
position = Vector2(4.74341, -1.58116)

[node name="LegUpperL" type="Sprite2D" parent="Body/Torso/HipL"]
position = Vector2(-2.85476, 0.568854)
rotation = 0.499649
scale = Vector2(0.417663, 0.417663)
texture = ExtResource("3_340x3")
offset = Vector2(17.7187, 0.855423)

[node name="LegLowerL" type="Sprite2D" parent="Body/Torso/HipL/LegUpperL"]
position = Vector2(41.6033, -0.811409)
rotation = 0.280511
texture = ExtResource("3_340x3")
offset = Vector2(17.7187, 0.855423)

[node name="FootL" type="Sprite2D" parent="Body/Torso/HipL/LegUpperL/LegLowerL"]
position = Vector2(40.485, -0.480497)
rotation = -1.41912
scale = Vector2(0.581697, 0.581696)
texture = ExtResource("3_340x3")
offset = Vector2(17.7187, 0.855423)

[node name="StateMachine" type="Node2D" parent="."]
script = ExtResource("10_6ualt")
initial_state = NodePath("Idle")

[node name="Idle" type="Node2D" parent="StateMachine"]
script = ExtResource("11_jtylp")

[node name="Run" type="Node2D" parent="StateMachine"]
script = ExtResource("12_oq1kf")

[node name="Air" type="Node2D" parent="StateMachine"]
script = ExtResource("13_a17mm")

[node name="DoubleJump" type="Node2D" parent="StateMachine"]
script = ExtResource("23_r318r")

[node name="DescendingKick" type="Node2D" parent="StateMachine"]
script = ExtResource("16_7kpt4")

[node name="UnstuckTimer" type="Timer" parent="StateMachine/DescendingKick"]
wait_time = 3.0
one_shot = true

[node name="HurtBox" type="Area2D" parent="StateMachine/DescendingKick"]
collision_layer = 0
collision_mask = 10

[node name="DescendingKickCollisionShape2D" type="CollisionShape2D" parent="StateMachine/DescendingKick/HurtBox"]
position = Vector2(7, -6.5)
shape = SubResource("RectangleShape2D_k6ucv")
disabled = true

[node name="Landing" type="Node2D" parent="StateMachine"]
script = ExtResource("25_hj8m7")

[node name="Dash" type="Node2D" parent="StateMachine"]
script = ExtResource("18_6dmrt")

[node name="DashHurtBox" type="Area2D" parent="StateMachine/Dash"]
collision_layer = 0
collision_mask = 10

[node name="DashCollisionShape" type="CollisionShape2D" parent="StateMachine/Dash/DashHurtBox"]
position = Vector2(13, -19)
shape = SubResource("RectangleShape2D_46i3j")

[node name="Dying" type="Node2D" parent="StateMachine"]
script = ExtResource("26_npw41")

[node name="CPUParticles2D" type="CPUParticles2D" parent="StateMachine/Dying"]
position = Vector2(0, -19)
emitting = false
amount = 32
emission_shape = 3
emission_rect_extents = Vector2(8, 8)
direction = Vector2(2.08165e-12, -1)
initial_velocity_min = 300.0
initial_velocity_max = 300.0
angle_min = 45.0
angle_max = 45.0
scale_amount_min = 3.0
scale_amount_max = 8.0
color = Color(0.501961, 0, 0.137255, 1)
hue_variation_max = 0.1

[node name="Timer" type="Timer" parent="StateMachine/Dying"]
wait_time = 2.0
one_shot = true

[node name="Dead" type="Node2D" parent="StateMachine"]
script = ExtResource("27_0qqb8")

[node name="Timer" type="Timer" parent="StateMachine/Dead"]
wait_time = 3.0
one_shot = true

[node name="Label" type="Label" parent="StateMachine/Dead"]
visible = false
z_index = 20
offset_left = -53.0
offset_top = -64.0
offset_right = 101.0
offset_bottom = -12.0
text = "That is unfortunate.
You died."
horizontal_alignment = 1

[node name="StrongPunch" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("charge_vfx")]
script = ExtResource("27_487ye")
charge_vfx = NodePath("CPUParticles2D")

[node name="HurtBox" type="Area2D" parent="StateMachine/StrongPunch"]
position = Vector2(44, -14)
collision_layer = 0
collision_mask = 10

[node name="StrongCollisionShape" type="CollisionShape2D" parent="StateMachine/StrongPunch/HurtBox"]
position = Vector2(-13, -4.26243)
shape = SubResource("RectangleShape2D_ghqx3")
disabled = true

[node name="CPUParticles2D" type="CPUParticles2D" parent="StateMachine/StrongPunch"]
visible = false
position = Vector2(-15, -18)
amount = 40
lifetime = 0.5
direction = Vector2(-1, 2.08165e-12)
gravity = Vector2(2.08165e-12, 2.08165e-12)
initial_velocity_max = 40.0

[node name="ChargeAudio" type="Node2D" parent="StateMachine/StrongPunch"]
script = ExtResource("21_85smj")

[node name="ChargeAudioSequence" type="AudioStreamPlayer2D" parent="StateMachine/StrongPunch/ChargeAudio"]
stream = SubResource("AudioStreamRandomizer_10l48")
bus = &"sfx"

[node name="Duration_Per_Level" type="Timer" parent="StateMachine/StrongPunch/ChargeAudio"]
wait_time = 1.5
one_shot = true

[node name="ImpactAudio" type="AudioStreamPlayer2D" parent="StateMachine/StrongPunch"]
stream = SubResource("AudioStreamRandomizer_xs8aj")
bus = &"sfx"

[node name="FastPunch" type="Node2D" parent="StateMachine"]
script = ExtResource("28_amcrx")

[node name="UnbrokenSequenceTimer" type="Timer" parent="StateMachine/FastPunch"]
one_shot = true

[node name="HurtBox" type="Area2D" parent="StateMachine/FastPunch"]
position = Vector2(44, -23)
collision_layer = 0
collision_mask = 10

[node name="FastCollisionShape" type="CollisionShape2D" parent="StateMachine/FastPunch/HurtBox"]
position = Vector2(-23.5, 1)
shape = SubResource("RectangleShape2D_is7h8")
disabled = true

[node name="ImpactAudio" type="Node2D" parent="StateMachine/FastPunch"]

[node name="Punch1Audio" type="AudioStreamPlayer2D" parent="StateMachine/FastPunch/ImpactAudio"]
stream = SubResource("AudioStreamRandomizer_xkxws")
volume_db = 5.0
bus = &"sfx"

[node name="Punch2Audio" type="AudioStreamPlayer2D" parent="StateMachine/FastPunch/ImpactAudio"]
stream = SubResource("AudioStreamRandomizer_7jb3f")
volume_db = 9.0
bus = &"sfx"

[node name="Punch3Audio" type="AudioStreamPlayer2D" parent="StateMachine/FastPunch/ImpactAudio"]
stream = SubResource("AudioStreamRandomizer_px4x1")
volume_db = 12.0
bus = &"sfx"

[node name="InTransit" type="Node2D" parent="StateMachine"]
script = ExtResource("26_teftq")

[node name="Debug" type="Node2D" parent="."]
visible = false
position = Vector2(-15, -56)

[node name="StateLabel" type="Label" parent="Debug"]
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 10
text = "state"
script = ExtResource("15_7astd")

[node name="Audio" parent="." instance=ExtResource("25_x3gmp")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": ExtResource("26_6myd8")
}

[node name="HUD" parent="." instance=ExtResource("14_fp8yf")]
visible = false

[node name="PlatformDetector" type="Area2D" parent="."]
position = Vector2(0, 5)
collision_layer = 0
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlatformDetector"]
position = Vector2(0, -4)
shape = SubResource("RectangleShape2D_m8oiq")

[connection signal="timeout" from="StateMachine/DescendingKick/UnstuckTimer" to="StateMachine/DescendingKick" method="_on_unstuck_timer_timeout"]
[connection signal="body_entered" from="StateMachine/DescendingKick/HurtBox" to="StateMachine/DescendingKick" method="_on_hurt_box_body_entered"]
[connection signal="body_entered" from="StateMachine/Dash/DashHurtBox" to="StateMachine/Dash" method="_on_dash_hurt_box_body_entered"]
[connection signal="timeout" from="StateMachine/Dead/Timer" to="StateMachine/Dead" method="_on_timer_timeout"]
[connection signal="body_entered" from="StateMachine/StrongPunch/HurtBox" to="StateMachine/StrongPunch" method="_on_hurt_box_body_entered"]
[connection signal="timeout" from="StateMachine/StrongPunch/ChargeAudio/Duration_Per_Level" to="StateMachine/StrongPunch/ChargeAudio" method="_on_duration_per_level_timeout"]
[connection signal="timeout" from="StateMachine/FastPunch/UnbrokenSequenceTimer" to="StateMachine/FastPunch" method="_on_unbroken_sequence_timer_timeout"]
[connection signal="body_entered" from="StateMachine/FastPunch/HurtBox" to="StateMachine/FastPunch" method="_on_hurt_box_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
